[package]
name = "substrate-bn"
version = "0.6.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Parity Technologies <admin@parity.io>"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/paritytech/bn"
repository = "https://github.com/paritytech/bn"
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = []
# Route mul_reduce through a hand-written ARMv8-M asm path using UMAAL
# on 32-bit limbs. Only has effect on target_arch = "arm"; off by default.
cortex-m33-asm = []
# Expose `arith::selftest_fq` / `arith::selftest_fr` for on-device testing.
# Only meaningful together with `cortex-m33-asm` on an ARM target.
test-harness = []

[[bench]]
name = "api"

[dependencies]
rand = { version = "0.8.3", default-features = false }
byteorder = { version = "1.0", features = ["i128"], default-features = false }
crunchy = "0.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
rustc-hex = { version = "2", default-features = false }

[dev-dependencies]
rand = { version = "0.8.3", features = ["std_rng"] }

